[tool.poetry]
name = "mango-explorer-v4"
version = "0.7.6"
description = ""
authors = ["waterquarks <waterquarks@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mango_explorer_v4" }
]

[tool.poetry.dependencies]
python = "^3.9"
anchorpy = "0.14.0"
anchorpy-core = "0.1.2"
anyio = "3.6.2"
apischema = "0.16.6"
appnope = "0.1.3"
asttokens = "2.2.1"
attrs = "22.1.0"
autoflake = "2.0.0"
backcall = "0.2.0"
base58 = "2.1.1"
based58 = "0.1.1"
black = "22.12.0"
borsh-construct = "0.1.0"
cachetools = "4.2.4"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
construct = "2.10.68"
construct-typing = "0.5.3"
decorator = "5.1.1"
exceptiongroup = "1.0.4"
executing = "1.2.0"
genpy = "2022.1"
h11 = "0.14.0"
httpcore = "0.16.3"
httpx = "0.23.1"
idna = "3.4"
iniconfig = "1.1.1"
ipython = "8.7.0"
jedi = "0.18.2"
jsonalias = "0.1.1"
jsonrpcclient = "4.0.2"
jsonrpcserver = "5.0.9"
jsonschema = "4.17.3"
matplotlib-inline = "0.1.6"
more-itertools = "8.14.0"
mypy-extensions = "0.4.3"
numpy = "1.24.0"
oslash = "0.6.3"
packaging = "22.0"
parso = "0.8.3"
pathspec = "0.10.3"
pexpect = "4.8.0"
pickleshare = "0.7.5"
platformdirs = "2.6.0"
pluggy = "1.0.0"
prompt-toolkit = "3.0.36"
psutil = "5.9.4"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pycparser = "2.21"
pyflakes = "3.0.1"
pygments = "2.13.0"
pyheck = "0.1.5"
pynacl = "1.5.0"
pyrsistent = "0.19.2"
pytest = "7.2.0"
pytest-asyncio = "0.20.3"
pytest-xprocess = "0.18.1"
pytools = "2022.1.13"
requests = "2.28.1"
rfc3986 = "1.5.0"
six = "1.16.0"
sniffio = "1.3.0"
solana = "0.28.1"
solders = "0.10.0"
stack-data = "0.6.2"
sumtypes = "0.1a6"
tomli = "2.0.1"
toolz = "0.11.2"
traitlets = "5.8.0"
typer = "0.7.0"
types-cachetools = "4.2.10"
typing-extensions = "4.4.0"
urllib3 = "1.26.13"
wcwidth = "0.2.5"
websockets = "10.4"
zstandard = "0.17.0"
mangopyserum = "^0.6.0a0"
sortedcontainers = "^2.4.0"
aiostream = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
